[metadata]
name = iris
author = Open Greek and Latin
summary = Expandable and scalable OCR pipeline
description-file = README.md
license = GPLv2+
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Science/Research
        Intended Audience :: Education
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
        Operating System :: POSIX
	Programming Language :: Python :: 2 :: Only
keywords =
    ocr
    tesseract
    ocropus
    celery

[files]
packages = iris
data_files =
    etc/iris =
        examples/celery.yaml
        examples/iris.yaml
[entry_points]
console_scripts =
    iris = iris.cli:main
