[global]
commands = download.DownloadCommand

[metadata]
name = nidaba 
author = Open Greek and Latin
author-email = mittagessen@l.unchti.me
summary = Expandable and scalable OCR pipeline
description-file = README.rst
license = GPLv2+
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Intended Audience :: Science/Research
        Intended Audience :: Education
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
        Operating System :: POSIX
	Programming Language :: Python :: 2 :: Only
url = http://openphilology.github.com/nidaba
keywords =
    ocr
    tesseract
    ocropus
    celery

[files]
packages = nidaba 
data_files =
    etc/nidaba =
        examples/celery.yaml
        examples/nidaba.yaml

[entry_points]
console_scripts =
    nidaba = nidaba.cli:main

[pbr]
SKIP_GENERATE_AUTHORS=1

[nosetests]
verbosity=1
detailed-errors=1
tests=tests
